--- a/main.css
+++ b/main.css
@@ -106,19 +106,57 @@ button:hover{
     }
 }
 
-@media screen and(min-width: 641px) and (max-width: 1023px){
-    .texto h2, .texto p{
-        margin: 105px;
-        text-align: justify;
-    }
-
-    .produtos{
-        grid-template-columns: repeat(2,23%);
-    }
-}
-
 @media screen and (min-width: 1024px){
     .container_flex{
         display: flex;
+    }
+
+    .produtos{
+        grid-template-columns:  repeat(4,23%);
+        column-gap: 2%;
+        row-gap: 2%;
+    }
+}
+
+@media screen and (min-width: 641px) and (max-width: 1023px){
+    .texto h2, .texto p{
+        text-align: left;
+        margin-left: 0;
+    }
+
+    .produtos{
+        text-align: center;
+    }
+
+    .produtos{
+        grid-template-columns: repeat(2,48%);
+    }
+}
+
+/* @media screen and (max-width: 1023px){
+    .texto h2, .texto p{
+        text-align: left;
+        margin-left: 0;
+    }
+
+    .produtos{
+        text-align: center;
+    }
+
+    .produtos{
+        grid-template-columns: repeat(2,48%);
+    }
+} */
+
+@media screen and (max-width: 640px){
+    .texto h2, .texto p{
+        text-align: left;
+        margin-left: 0;
+    }
+    .produtos{
+        text-align: center;
+    }
+    .produtos{
+        grid-template-columns: 100%;
     }
 }
